<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:descendantFocusability="blocksDescendants"
    android:background="@color/teal_700"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cl_layout"
        android:clipToPadding="false"
        android:descendantFocusability="blocksDescendants"
        android:padding="16dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_favorite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/favorite" />

        <ImageView
            android:id="@+id/image_poster"
            android:layout_width="150dp"
            android:layout_height="230dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="212dp"
            android:src="@color/placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/poster" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/poppins_bold"
            android:maxLines="3"
            android:text="@string/title"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/image_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/image_poster"
            app:layout_constraintTop_toTopOf="@+id/image_poster"
            app:layout_constraintVertical_bias="0.041"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/poppins_regular"
            android:maxLines="2"
            android:text="@string/popularity"
            android:textSize="13sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txt_title"
            app:layout_constraintTop_toBottomOf="@+id/txt_title"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/txt_popularity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_regular"
            android:maxLines="2"
            android:text="@string/sum_popularity"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@+id/popularity"
            app:layout_constraintTop_toBottomOf="@+id/popularity"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/iv_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_star_rate_24"
            app:layout_constraintBottom_toBottomOf="@+id/txt_rating"
            app:layout_constraintStart_toStartOf="@+id/txt_popularity"
            app:layout_constraintTop_toTopOf="@+id/txt_rating"
            app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/rate" />

        <TextView
            android:id="@+id/txt_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/rating"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toEndOf="@+id/iv_star"
            app:layout_constraintTop_toBottomOf="@+id/txt_popularity" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cl_layout"
        android:id="@+id/cv_overview"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/nude_200"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="-5dp"
            tools:layout_editor_absoluteY="336dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/overview"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="4dp" />

            <TextView
                android:id="@+id/txt_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/overview_desc"
                android:textSize="14sp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cv_overview"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="5dp"
        android:layout_marginTop="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/nude_200">

            <TextView
                android:id="@+id/txt_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:maxLines="2"
                android:padding="8dp"
                android:text="@string/date"
                android:textSize="16sp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="0dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
</RelativeLayout>