<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_movie">

    <fragment
        android:id="@+id/navigation_movie"
        android:name="com.mumti.jetpacksubmission.movie.MovieFragment"
        android:label="@string/movies"
        tools:layout="@layout/fragment_movie" />

    <fragment
        android:id="@+id/navigation_tv_show"
        android:name="com.mumti.jetpacksubmission.tv.TvFragment"
        android:label="@string/tv"
        tools:layout="@layout/fragment_tv" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.mumti.favorite.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" />
</navigation>