<resources>
    <string name="app_name">JetpackSubmission</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_activity_detail_film">Detail Film</string>

    <string name="title">Title</string>
    <string name="type">Type</string>
    <string name="overview">Overview</string>
    <string name="overview_desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="date">Date</string>
    <string name="slogan">Film Slogan</string>
    <string name="category">Category</string>
    <string name="share_text">%s di Rekomendasikan</string>
    <string name="movies">Movies</string>
    <string name="tv">TV Shows</string>
    <string name="tv_show">TV Series</string>
    <string name="favorite">Favorite</string>
    <string name="splash">Splash Screen</string>
    <string name="title_favorite">Favorite</string>
    <string name="rating">7.2</string>
    <string name="popularity">Popularity: </string>
    <string name="sum_popularity">100.000</string>
    <string name="rate">Rating</string>
</resources>